improvements based on feedback from team

--- a/BlankCordovaApp1/www/category.html
+++ b/BlankCordovaApp1/www/category.html
@@ -26,22 +26,22 @@
             </form>
 
             <form action="index.html" style="float:left">
-                <input class="smallbut" type="submit" value="COMPANY" />
+                <input class="smallbut smallbut1" type="submit" value="COMPANY" />
             </form>
 
             <form action="category.html" style="float:left">
-                <input class="smallbut" type="submit" value="CATEGORY" />
+                <input class="smallbut smallbut2sel" type="submit" value="CATEGORY" />
             </form>
 
             <form action="transactionid.html">
-                <input class="smallbut" type="submit" value="TRANSACTION ID" />
+                <input class="smallbut smallbut3" type="submit" value="TRANSACTION ID" />
             </form>
         </div>
 
         <div class="container">
             <form action="search.html" style="float:left">
-                <button class="button" style="background-image:url(/images/grocery.png);">
-                    <div>Retail and Grocery</div>
+                <button class="button" style="background-image:url(/images/grocery.png); background-size:143px; background-repeat: no-repeat;">
+                    <div class="textbottom">Retail and Grocery</div>
                 </button>
             </form>
 
@@ -50,8 +50,8 @@
 
         <div class="container">
             <form action="search.html" style="float:left">
-                <button class="button" style="background-image:url(/images/restaurant.png);">
-                    <div>Restaurants</div>
+                <button class="button" style="background-image:url(/images/restaurant.png); background-size:128px; background-repeat: no-repeat; background-position:top">
+                    <div class="textbottom">Restaurants</div>
                 </button>
             </form>
 
@@ -60,8 +60,8 @@
 
         <div class="container">
             <form action="search.html" style="float:left">
-                <button class="button" style="background-image:url(/images/personalcare.png);">
-                    <div>Personal Care</div>
+                <button class="button" style="background-image:url(/images/personalcare.png); background-size:128px; background-repeat: no-repeat;background-position:top">
+                    <div class="textbottom">Personal Care</div>
                 </button>
             </form>
 
@@ -70,31 +70,31 @@
         <div class="container">
             <form action="search.html" style="float:left">
                 <button class="button" style="background-image:url(/images/transportation.png);">
-                    <div>Transportation</div>
+                    <div class="textbottom">Transportation</div>
                 </button>
             </form>
         </div>
 
         <div class="container">
             <form action="search.html" style="float:left">
-                <button class="button" style="background-image:url(/images/education.png);">
-                    <div>Education</div>
+                <button class="button" style="background-image:url(/images/education.png); background-size:145px; background-repeat: no-repeat;background-position:top">
+                    <div class="textbottom">Education</div>
                 </button>
             </form>
         </div>
 
         <div class="container">
             <form action="search.html" style="float:left">
-                <button class="button" style="background-image:url(/images/entertainment.png);">
-                    <div>Entertainment & Recreation</div>
+                <button class="button" style="background-image:url(/images/entertainment.png); background-size:128px; background-repeat: no-repeat;background-position:top">
+                    <div class="textbottom">Entertainment & Recreation</div>
                 </button>
             </form>
         </div>
 
         <div class="container">
             <form action="search.html" style="float:left">
-                <button class="button" style="background-image:url(/images/health.png);">
-                    <div>Health</div>
+                <button class="button" style="background-image:url(/images/health.png); background-size:145px; background-repeat: no-repeat;background-position:top">
+                    <div class="textbottom">Health</div>
                 </button>
             </form>
         </div>
