--- a/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/www/index.html
@@ -26,7 +26,7 @@
             </form>
 
             <form action="index.html" style="float:left">
-                <input class="smallbut" type="submit" value="COMPANY" />
+                <input class="smallbut smallbut1sel" type="submit" value="COMPANY" />
             </form>
 
             <form action="category.html" style="float:left">
@@ -34,7 +34,7 @@
             </form>
 
             <form action="transactionid.html">
-                <input class="smallbut" type="submit" value="TRANSACTION ID" />
+                <input class="smallbut smallbut3" type="submit" value="TRANSACTION ID" />
             </form>
         </div>
 
